pattern_validator/grammars/CyboxPatternParser.py
# Generated from CyboxPattern.g4 by ANTLR 4.5.3
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class CyboxPatternParser ( Parser ):

    grammarFileName = "CyboxPattern.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"'='", u"'!='", u"'<'", u"'<='", u"'>'", u"'>='", 
                     u"'''", u"';'", u"':'", u"'.'", u"','", u"')'", u"'('", 
                     u"']'", u"'['", u"'+'", u"'-'", u"<INVALID>", u"'~'", 
                     u"'|'", u"'&'", u"'%'", u"'^'", u"'/'", u"'*'" ]

    symbolicNames = [ u"<INVALID>", u"RegexLiteral", u"AND", u"ALONGWITH", 
                      u"OR", u"NOT", u"FOLLOWEDBY", u"LIKE", u"REGEX", u"CONTAINS", 
                      u"LAST", u"IN", u"START", u"STOP", u"MILLISECONDS", 
                      u"SECONDS", u"MINUTES", u"HOURS", u"DAYS", u"MONTHS", 
                      u"YEARS", u"TRUE", u"FALSE", u"NULL", u"WITHIN", u"REPEATED", 
                      u"TIMES", u"Timestamp", u"Date", u"Time", u"IntegerLiteral", 
                      u"FloatingPointLiteral", u"Binary", u"StringLiteral", 
                      u"Identifier", u"IdentifierChunk", u"EQ", u"NEQ", 
                      u"LT", u"LE", u"GT", u"GE", u"QUOTE", u"SEMI", u"COLON", 
                      u"DOT", u"COMMA", u"RPAREN", u"LPAREN", u"RBRACK", 
                      u"LBRACK", u"PLUS", u"MINUS", u"HYPHEN", u"NEGATION", 
                      u"VERTBAR", u"BITAND", u"MODULO", u"POWER_OP", u"DIVIDE", 
                      u"ASTERISK", u"WS", u"COMMENT", u"LINE_COMMENT" ]

    RULE_startExpression = 0
    RULE_objectExpression = 1
    RULE_timeWindow = 2
    RULE_booleanExpression = 3
    RULE_cidrExpression = 4
    RULE_booleanOperator = 5
    RULE_comparisonOperator = 6
    RULE_likeOperator = 7
    RULE_regexOperator = 8
    RULE_inOperator = 9
    RULE_expressionList = 10
    RULE_expression = 11
    RULE_arithmeticOperator = 12
    RULE_arguments = 13
    RULE_cidrLiteral = 14
    RULE_regexLiteral = 15
    RULE_literal = 16
    RULE_signedInt = 17
    RULE_signedFloat = 18
    RULE_stringLiteral = 19
    RULE_boolLiteral = 20
    RULE_binary = 21
    RULE_objectPath = 22
    RULE_extObject = 23
    RULE_listObject = 24
    RULE_simpleObjectList = 25
    RULE_nestedObjectList = 26
    RULE_nestedObject = 27
    RULE_indexObject = 28
    RULE_simpleObject = 29

    ruleNames =  [ u"startExpression", u"objectExpression", u"timeWindow", 
                   u"booleanExpression", u"cidrExpression", u"booleanOperator", 
                   u"comparisonOperator", u"likeOperator", u"regexOperator", 
                   u"inOperator", u"expressionList", u"expression", u"arithmeticOperator", 
                   u"arguments", u"cidrLiteral", u"regexLiteral", u"literal", 
                   u"signedInt", u"signedFloat", u"stringLiteral", u"boolLiteral", 
                   u"binary", u"objectPath", u"extObject", u"listObject", 
                   u"simpleObjectList", u"nestedObjectList", u"nestedObject", 
                   u"indexObject", u"simpleObject" ]

    EOF = Token.EOF
    RegexLiteral=1
    AND=2
    ALONGWITH=3
    OR=4
    NOT=5
    FOLLOWEDBY=6
    LIKE=7
    REGEX=8
    CONTAINS=9
    LAST=10
    IN=11
    START=12
    STOP=13
    MILLISECONDS=14
    SECONDS=15
    MINUTES=16
    HOURS=17
    DAYS=18
    MONTHS=19
    YEARS=20
    TRUE=21
    FALSE=22
    NULL=23
    WITHIN=24
    REPEATED=25
    TIMES=26
    Timestamp=27
    Date=28
    Time=29
    IntegerLiteral=30
    FloatingPointLiteral=31
    Binary=32
    StringLiteral=33
    Identifier=34
    IdentifierChunk=35
    EQ=36
    NEQ=37
    LT=38
    LE=39
    GT=40
    GE=41
    QUOTE=42
    SEMI=43
    COLON=44
    DOT=45
    COMMA=46
    RPAREN=47
    LPAREN=48
    RBRACK=49
    LBRACK=50
    PLUS=51
    MINUS=52
    HYPHEN=53
    NEGATION=54
    VERTBAR=55
    BITAND=56
    MODULO=57
    POWER_OP=58
    DIVIDE=59
    ASTERISK=60
    WS=61
    COMMENT=62
    LINE_COMMENT=63

    def __init__(self, input):
        super(CyboxPatternParser, self).__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CyboxPatternParser.StartExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def objectExpression(self):
            return self.getTypedRuleContext(CyboxPatternParser.ObjectExpressionContext,0)


        def EOF(self):
            return self.getToken(CyboxPatternParser.EOF, 0)

        def getRuleIndex(self):
            return CyboxPatternParser.RULE_startExpression

        def enterRule(self, listener):
            if hasattr(listener, "enterStartExpression"):
                listener.enterStartExpression(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStartExpression"):
                listener.exitStartExpression(self)




    def startExpression(self):

        localctx = CyboxPatternParser.StartExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_startExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.objectExpression(0)
            self.state = 61
            self.match(CyboxPatternParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjectExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CyboxPatternParser.ObjectExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ObjectExpressionContext
            self.be = None # ObjectExpressionContext
            self.bop = None # Token
            self.right = None # ObjectExpressionContext
            self.window = None # TimeWindowContext

        def LPAREN(self):
            return self.getToken(CyboxPatternParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CyboxPatternParser.RPAREN, 0)

        def objectExpression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CyboxPatternParser.ObjectExpressionContext)
            else:
                return self.getTypedRuleContext(CyboxPatternParser.ObjectExpressionContext,i)


        def NOT(self):
            return self.getToken(CyboxPatternParser.NOT, 0)

        def booleanExpression(self):
            return self.getTypedRuleContext(CyboxPatternParser.BooleanExpressionContext,0)


        def AND(self):
            return self.getToken(CyboxPatternParser.AND, 0)

        def OR(self):
            return self.getToken(CyboxPatternParser.OR, 0)

        def ALONGWITH(self):
            return self.getToken(CyboxPatternParser.ALONGWITH, 0)

        def FOLLOWEDBY(self):
            return self.getToken(CyboxPatternParser.FOLLOWEDBY, 0)

        def timeWindow(self):
            return self.getTypedRuleContext(CyboxPatternParser.TimeWindowContext,0)


        def getRuleIndex(self):
            return CyboxPatternParser.RULE_objectExpression

        def enterRule(self, listener):
            if hasattr(listener, "enterObjectExpression"):
                listener.enterObjectExpression(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitObjectExpression"):
                listener.exitObjectExpression(self)



    def objectExpression(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CyboxPatternParser.ObjectExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_objectExpression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 65
                _la = self._input.LA(1)
                if _la==CyboxPatternParser.NOT:
                    self.state = 64
                    self.match(CyboxPatternParser.NOT)


                self.state = 67
                self.match(CyboxPatternParser.LPAREN)
                self.state = 68
                localctx.be = self.objectExpression(0)
                self.state = 69
                self.match(CyboxPatternParser.RPAREN)
                pass

            elif la_ == 2:
                self.state = 72
                _la = self._input.LA(1)
                if _la==CyboxPatternParser.NOT:
                    self.state = 71
                    self.match(CyboxPatternParser.NOT)


                self.state = 74
                self.booleanExpression()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 84
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 82
                    self._errHandler.sync(self);
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = CyboxPatternParser.ObjectExpressionContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_objectExpression)
                        self.state = 77
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 78
                        localctx.bop = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CyboxPatternParser.AND) | (1 << CyboxPatternParser.ALONGWITH) | (1 << CyboxPatternParser.OR) | (1 << CyboxPatternParser.FOLLOWEDBY))) != 0)):
                            localctx.bop = self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 79
                        localctx.right = self.objectExpression(5)
                        pass

                    elif la_ == 2:
                        localctx = CyboxPatternParser.ObjectExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_objectExpression)
                        self.state = 80
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")

                        self.state = 81
                        localctx.window = self.timeWindow()
                        pass

             
                self.state = 86
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class TimeWindowContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CyboxPatternParser.TimeWindowContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.startTime = None # Token
            self.stopTime = None # Token
            self.timespec = None # Token
            self.repeats = None # Token

        def START(self):
            return self.getToken(CyboxPatternParser.START, 0)

        def Timestamp(self, i=None):
            if i is None:
                return self.getTokens(CyboxPatternParser.Timestamp)
            else:
                return self.getToken(CyboxPatternParser.Timestamp, i)

        def STOP(self):
            return self.getToken(CyboxPatternParser.STOP, 0)

        def WITHIN(self):
            return self.getToken(CyboxPatternParser.WITHIN, 0)

        def IntegerLiteral(self):
            return self.getToken(CyboxPatternParser.IntegerLiteral, 0)

        def MILLISECONDS(self):
            return self.getToken(CyboxPatternParser.MILLISECONDS, 0)

        def SECONDS(self):
            return self.getToken(CyboxPatternParser.SECONDS, 0)

        def MINUTES(self):
            return self.getToken(CyboxPatternParser.MINUTES, 0)

        def HOURS(self):
            return self.getToken(CyboxPatternParser.HOURS, 0)

        def DAYS(self):
            return self.getToken(CyboxPatternParser.DAYS, 0)

        def MONTHS(self):
            return self.getToken(CyboxPatternParser.MONTHS, 0)

        def YEARS(self):
            return self.getToken(CyboxPatternParser.YEARS, 0)

        def REPEATED(self):
            return self.getToken(CyboxPatternParser.REPEATED, 0)

        def TIMES(self):
            return self.getToken(CyboxPatternParser.TIMES, 0)

        def getRuleIndex(self):
            return CyboxPatternParser.RULE_timeWindow

        def enterRule(self, listener):
            if hasattr(listener, "enterTimeWindow"):
                listener.enterTimeWindow(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTimeWindow"):
                listener.exitTimeWindow(self)




    def timeWindow(self):

        localctx = CyboxPatternParser.TimeWindowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_timeWindow)
        self._la = 0 # Token type
        try:
            self.state = 99
            token = self._input.LA(1)
            if token in [CyboxPatternParser.START]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.match(CyboxPatternParser.START)
                self.state = 88
                localctx.startTime = self.match(CyboxPatternParser.Timestamp)
                self.state = 91
                self._errHandler.sync(self);
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 89
                    self.match(CyboxPatternParser.STOP)
                    self.state = 90
                    localctx.stopTime = self.match(CyboxPatternParser.Timestamp)



            elif token in [CyboxPatternParser.WITHIN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(CyboxPatternParser.WITHIN)
                self.state = 94
                localctx.timespec = self.match(CyboxPatternParser.IntegerLiteral)
                self.state = 95
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CyboxPatternParser.MILLISECONDS) | (1 << CyboxPatternParser.SECONDS) | (1 << CyboxPatternParser.MINUTES) | (1 << CyboxPatternParser.HOURS) | (1 << CyboxPatternParser.DAYS) | (1 << CyboxPatternParser.MONTHS) | (1 << CyboxPatternParser.YEARS))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self.consume()

            elif token in [CyboxPatternParser.REPEATED]:
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                self.match(CyboxPatternParser.REPEATED)
                self.state = 97
                localctx.repeats = self.match(CyboxPatternParser.IntegerLiteral)
                self.state = 98
                self.match(CyboxPatternParser.TIMES)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BooleanExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CyboxPatternParser.BooleanExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CyboxPatternParser.ExpressionContext,0)


        def booleanOperator(self):
            return self.getTypedRuleContext(CyboxPatternParser.BooleanOperatorContext,0)


        def cidrExpression(self):
            return self.getTypedRuleContext(CyboxPatternParser.CidrExpressionContext,0)


        def getRuleIndex(self):
            return CyboxPatternParser.RULE_booleanExpression

        def enterRule(self, listener):
            if hasattr(listener, "enterBooleanExpression"):
                listener.enterBooleanExpression(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBooleanExpression"):
                listener.exitBooleanExpression(self)




    def booleanExpression(self):

        localctx = CyboxPatternParser.BooleanExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_booleanExpression)
        try:
            self.state = 105
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.expression(0)
                self.state = 102
                self.booleanOperator()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.cidrExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CidrExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CyboxPatternParser.CidrExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def cidrLiteral(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CyboxPatternParser.CidrLiteralContext)
            else:
                return self.getTypedRuleContext(CyboxPatternParser.CidrLiteralContext,i)


        def CONTAINS(self):
            return self.getToken(CyboxPatternParser.CONTAINS, 0)

        def getRuleIndex(self):
            return CyboxPatternParser.RULE_cidrExpression

        def enterRule(self, listener):
            if hasattr(listener, "enterCidrExpression"):
                listener.enterCidrExpression(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCidrExpression"):
                listener.exitCidrExpression(self)




    def cidrExpression(self):

        localctx = CyboxPatternParser.CidrExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cidrExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.cidrLiteral()
            self.state = 108
            self.match(CyboxPatternParser.CONTAINS)
            self.state = 109
            self.cidrLiteral()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BooleanOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CyboxPatternParser.BooleanOperatorContext, self).__init__(parent, invokingState)
            self.parser = parser

        def comparisonOperator(self):
            return self.getTypedRuleContext(CyboxPatternParser.ComparisonOperatorContext,0)


        def likeOperator(self):
            return self.getTypedRuleContext(CyboxPatternParser.LikeOperatorContext,0)


        def inOperator(self):
            return self.getTypedRuleContext(CyboxPatternParser.InOperatorContext,0)


        def regexOperator(self):
            return self.getTypedRuleContext(CyboxPatternParser.RegexOperatorContext,0)


        def getRuleIndex(self):
            return CyboxPatternParser.RULE_booleanOperator

        def enterRule(self, listener):
            if hasattr(listener, "enterBooleanOperator"):
                listener.enterBooleanOperator(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBooleanOperator"):
                listener.exitBooleanOperator(self)




    def booleanOperator(self):

        localctx = CyboxPatternParser.BooleanOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_booleanOperator)
        try:
            self.state = 115
            token = self._input.LA(1)
            if token in [CyboxPatternParser.EQ, CyboxPatternParser.NEQ, CyboxPatternParser.LT, CyboxPatternParser.LE, CyboxPatternParser.GT, CyboxPatternParser.GE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.comparisonOperator()

            elif token in [CyboxPatternParser.LIKE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.likeOperator()

            elif token in [CyboxPatternParser.IN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.inOperator()

            elif token in [CyboxPatternParser.REGEX]:
                self.enterOuterAlt(localctx, 4)
                self.state = 114
                self.regexOperator()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ComparisonOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CyboxPatternParser.ComparisonOperatorContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.cop = None # Token

        def expression(self):
            return self.getTypedRuleContext(CyboxPatternParser.ExpressionContext,0)


        def EQ(self):
            return self.getToken(CyboxPatternParser.EQ, 0)

        def NEQ(self):
            return self.getToken(CyboxPatternParser.NEQ, 0)

        def LT(self):
            return self.getToken(CyboxPatternParser.LT, 0)

        def LE(self):
            return self.getToken(CyboxPatternParser.LE, 0)

        def GT(self):
            return self.getToken(CyboxPatternParser.GT, 0)

        def GE(self):
            return self.getToken(CyboxPatternParser.GE, 0)

        def getRuleIndex(self):
            return CyboxPatternParser.RULE_comparisonOperator

        def enterRule(self, listener):
            if hasattr(listener, "enterComparisonOperator"):
                listener.enterComparisonOperator(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitComparisonOperator"):
                listener.exitComparisonOperator(self)




    def comparisonOperator(self):

        localctx = CyboxPatternParser.ComparisonOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_comparisonOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            localctx.cop = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CyboxPatternParser.EQ) | (1 << CyboxPatternParser.NEQ) | (1 << CyboxPatternParser.LT) | (1 << CyboxPatternParser.LE) | (1 << CyboxPatternParser.GT) | (1 << CyboxPatternParser.GE))) != 0)):
                localctx.cop = self._errHandler.recoverInline(self)
            else:
                self.consume()
            self.state = 118
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LikeOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CyboxPatternParser.LikeOperatorContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.pattern = None # ExpressionContext

        def LIKE(self):
            return self.getToken(CyboxPatternParser.LIKE, 0)

        def expression(self):
            return self.getTypedRuleContext(CyboxPatternParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CyboxPatternParser.RULE_likeOperator

        def enterRule(self, listener):
            if hasattr(listener, "enterLikeOperator"):
                listener.enterLikeOperator(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLikeOperator"):
                listener.exitLikeOperator(self)




    def likeOperator(self):

        localctx = CyboxPatternParser.LikeOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_likeOperator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(CyboxPatternParser.LIKE)
            self.state = 121
            localctx.pattern = self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegexOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CyboxPatternParser.RegexOperatorContext, self).__init__(parent, invokingState)
            self.parser = parser

        def REGEX(self):
            return self.getToken(CyboxPatternParser.REGEX, 0)

        def regexLiteral(self):
            return self.getTypedRuleContext(CyboxPatternParser.RegexLiteralContext,0)


        def getRuleIndex(self):
            return CyboxPatternParser.RULE_regexOperator

        def enterRule(self, listener):
            if hasattr(listener, "enterRegexOperator"):
                listener.enterRegexOperator(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRegexOperator"):
                listener.exitRegexOperator(self)




    def regexOperator(self):

        localctx = CyboxPatternParser.RegexOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_regexOperator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(CyboxPatternParser.REGEX)
            self.state = 124
            self.regexLiteral()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InOperatorContext(ParserRuleContext):
